--- a/aoc/2015-3.html
+++ b/aoc/2015-3.html
@@ -162,53 +162,53 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>In the second part we only swap these values every time and after that we do the same thing. So we switch the santas.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use std::collections::HashSet;
+<pre><code class="language-rs">use std::collections::HashSet;
+use std::fs;
 
 type Pos = (i64, i64);
 type Houses = HashSet&lt;Pos&gt;;
 
 fn read_file(filepath: &amp;str) -&gt; String {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  binding.split('\n').next().unwrap().to_string()
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    binding.split('\n').next().unwrap().to_string()
 }
 
-fn found_houses(line: &amp;str, robo_santa:  bool) -&gt; usize {
-  let mut houses: Houses = HashSet::new();
-  let mut pos: Pos = (0,0);
-  let mut robo_pos: Pos = (0,0);
-  houses.insert(pos);
-  for c in line.chars() {
-    match c {
-      '&gt;' =&gt; pos = (pos.0, pos.1 + 1),
-      '&lt;' =&gt; pos = (pos.0, pos.1 - 1),
-      'v' =&gt; pos = (pos.0 + 1, pos.1),
-      '^' =&gt; pos = (pos.0 - 1, pos.1),
-       _  =&gt; pos = pos,
-    }
+fn found_houses(line: &amp;str, robo_santa: bool) -&gt; usize {
+    let mut houses: Houses = HashSet::new();
+    let mut pos: Pos = (0, 0);
+    let mut robo_pos: Pos = (0, 0);
     houses.insert(pos);
-    if robo_santa {
-      (pos, robo_pos) = (robo_pos, pos);
+    for c in line.chars() {
+        match c {
+            '&gt;' =&gt; pos = (pos.0, pos.1 + 1),
+            '&lt;' =&gt; pos = (pos.0, pos.1 - 1),
+            'v' =&gt; pos = (pos.0 + 1, pos.1),
+            '^' =&gt; pos = (pos.0 - 1, pos.1),
+            _ =&gt; pos = pos,
+        }
+        houses.insert(pos);
+        if robo_santa {
+            (pos, robo_pos) = (robo_pos, pos);
+        }
     }
-  }
-  houses.len()
+    houses.len()
 }
 
 fn part1() {
-  let line = read_file("INPUT");
-  println!("Part 1: {}", found_houses(&amp;line, false));
+    let line = read_file("INPUT");
+    println!("Part 1: {}", found_houses(&amp;line, false));
 }
 
 fn part2() {
-  let line = read_file("INPUT");
-  println!("Part 2: {}", found_houses(&amp;line, true));
+    let line = read_file("INPUT");
+    println!("Part 2: {}", found_houses(&amp;line, true));
 }
 
 fn main() {
-  println!("Year 2015 day 3 - Perfectly Spherical Houses in a Vacuum");
-  part1();
-  part2();
+    println!("Year 2015 day 3 - Perfectly Spherical Houses in a Vacuum");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -216,11 +216,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2015-4.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2015-2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2015-2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015-4.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -230,11 +230,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2015-4.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2015-2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2015-2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015-4.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
