--- a/aoc/2015-4.html
+++ b/aoc/2015-4.html
@@ -162,45 +162,45 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>The second part is same only we check six zeros.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use md5::{Md5, Digest};
+<pre><code class="language-rs">use md5::{Digest, Md5};
+use std::fs;
 
 fn read_file(filepath: &amp;str) -&gt; String {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  binding.split('\n').next().unwrap().to_string()
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    binding.split('\n').next().unwrap().to_string()
 }
 
 fn prefix_md5(origin: &amp;str, eq: &amp;str) -&gt; u64 {
-  let mut i: u64 = 0;
-  loop {
-    let input = format!("{}{}", origin, i);
-    let mut hasher = Md5::new();
-    hasher.update(input);
-    let result = hasher.finalize();
-    let hash_string = format!("{:x}", result);
-    if hash_string[0..eq.len()] == eq.to_string() {
-      break;
+    let mut i: u64 = 0;
+    loop {
+        let input = format!("{}{}", origin, i);
+        let mut hasher = Md5::new();
+        hasher.update(input);
+        let result = hasher.finalize();
+        let hash_string = format!("{:x}", result);
+        if hash_string[0..eq.len()] == eq.to_string() {
+            break;
+        }
+        i += 1;
     }
-    i += 1;
-  }
-  i
+    i
 }
 
 fn part1() {
-  let origin = read_file("INPUT");
-  println!("Part 1: {}", prefix_md5(&amp;origin, "00000"));
+    let origin = read_file("INPUT");
+    println!("Part 1: {}", prefix_md5(&amp;origin, "00000"));
 }
 
 fn part2() {
-  let origin = read_file("INPUT");
-  println!("Part 2: {}", prefix_md5(&amp;origin, "000000"));
+    let origin = read_file("INPUT");
+    println!("Part 2: {}", prefix_md5(&amp;origin, "000000"));
 }
 
 fn main() {
-  println!("Year 2015 day 4 - The Ideal Stocking Stuffer");
-  part1();
-  part2();
+    println!("Year 2015 day 4 - The Ideal Stocking Stuffer");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -208,11 +208,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2015-5.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2015-3.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2015-3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015-5.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -222,11 +222,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2015-5.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2015-3.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2015-3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015-5.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
