--- a/aoc/2016-1.html
+++ b/aoc/2016-1.html
@@ -162,19 +162,19 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>The second part we visit every single step in the middle and find the one which was already visited.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use regex::Regex;
+<pre><code class="language-rs">use regex::Regex;
 use std::collections::HashSet;
+use std::fs;
 
 #[derive(Copy, Clone, Eq, Debug, PartialEq, Ord, PartialOrd)]
 enum Rotation {
-  R,
-  L,
+    R,
+    L,
 }
 
 struct Movement {
-  rot: Rotation,
-  mult: i64
+    rot: Rotation,
+    mult: i64,
 }
 
 type Position = (i64, i64);
@@ -185,69 +185,85 @@ const EAST: Position = (1, 0);
 const WEST: Position = (-1, 0);
 
 fn read_file(filepath: &amp;str) -&gt; Vec&lt;Movement&gt; {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  let mut movements: Vec&lt;Movement&gt; = vec!();
-  let re = Regex::new(r"(R|L)([0-9]+)").unwrap();
-  for(_, [rotation, movement]) in re.captures_iter(&amp;binding).map(|c| c.extract()) {
-    if rotation == "R" {
-      movements.push(Movement{rot: Rotation::R, mult: movement.parse().unwrap()});
-    } else {
-      movements.push(Movement{rot: Rotation::L, mult: movement.parse().unwrap()});
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    let mut movements: Vec&lt;Movement&gt; = vec![];
+    let re = Regex::new(r"(R|L)([0-9]+)").unwrap();
+    for (_, [rotation, movement]) in re.captures_iter(&amp;binding).map(|c| c.extract()) {
+        if rotation == "R" {
+            movements.push(Movement {
+                rot: Rotation::R,
+                mult: movement.parse().unwrap(),
+            });
+        } else {
+            movements.push(Movement {
+                rot: Rotation::L,
+                mult: movement.parse().unwrap(),
+            });
+        }
     }
-  }
-  movements
+    movements
 }
 
 fn get_shift(rot: Rotation, direction: Position) -&gt; Position {
-  match rot {
-    Rotation::R =&gt; {
-      if direction == NORTH {return EAST;}
-      else if direction == EAST {return SOUTH;}
-      else if direction == SOUTH {return WEST;}
-      else {return NORTH;}
-    },
-    Rotation::L =&gt; {
-      if direction == NORTH {return WEST;}
-      else if direction == WEST {return SOUTH;}
-      else if direction == SOUTH {return EAST;}
-      else {return NORTH;}
-    },
-  }
+    match rot {
+        Rotation::R =&gt; {
+            if direction == NORTH {
+                return EAST;
+            } else if direction == EAST {
+                return SOUTH;
+            } else if direction == SOUTH {
+                return WEST;
+            } else {
+                return NORTH;
+            }
+        }
+        Rotation::L =&gt; {
+            if direction == NORTH {
+                return WEST;
+            } else if direction == WEST {
+                return SOUTH;
+            } else if direction == SOUTH {
+                return EAST;
+            } else {
+                return NORTH;
+            }
+        }
+    }
 }
 
 fn distance(movements: &amp;Vec&lt;Movement&gt;, stop: bool) -&gt; i64 {
-  let mut positions: HashSet&lt;Position&gt; = HashSet::new();
-  let mut pos: Position = (0,0);
-  let mut shift: Position = NORTH;
-  'outer: for mov in movements {
-    shift = get_shift(mov.rot, shift);
-    for _ in 0 .. mov.mult {
-      pos.0 += shift.0;
-      pos.1 += shift.1;
-      if positions.contains(&amp;pos) &amp;&amp; stop {
-        break 'outer;
-      }
-      positions.insert(pos);
+    let mut positions: HashSet&lt;Position&gt; = HashSet::new();
+    let mut pos: Position = (0, 0);
+    let mut shift: Position = NORTH;
+    'outer: for mov in movements {
+        shift = get_shift(mov.rot, shift);
+        for _ in 0..mov.mult {
+            pos.0 += shift.0;
+            pos.1 += shift.1;
+            if positions.contains(&amp;pos) &amp;&amp; stop {
+                break 'outer;
+            }
+            positions.insert(pos);
+        }
     }
-  }
-  pos.0.abs() + pos.1.abs()
+    pos.0.abs() + pos.1.abs()
 }
 
 fn part1() {
-  let movements = read_file("INPUT");
-  println!("Part 1: {}", distance(&amp;movements, false));
+    let movements = read_file("INPUT");
+    println!("Part 1: {}", distance(&amp;movements, false));
 }
 
 fn part2() {
-  let movements = read_file("INPUT");
-  println!("Part 2: {}", distance(&amp;movements, true));
+    let movements = read_file("INPUT");
+    println!("Part 2: {}", distance(&amp;movements, true));
 }
 
 fn main() {
-  println!("Year 2016 day 1 - No Time for a Taxicab");
-  part1();
-  part2();
+    println!("Year 2016 day 1 - No Time for a Taxicab");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -255,11 +271,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2016-2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2016.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2015.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2016-2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -269,11 +285,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2016-2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2016.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2015.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2016-2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
