--- a/aoc/2023-21.html
+++ b/aoc/2023-21.html
@@ -168,8 +168,8 @@
 <p>The second part uses the implemented <code>bfs</code>. We are not able to compute it for all <code>26501365</code> steps. But there is some quite nice math behind the input. Firstly it is a square and there is a straight line from the middle to each side. Every neighbouring blocks switch <strong>even</strong>/<strong>odd</strong> parity. And lastly we campute the corners.</p>
 <p>This is just simplified steps of the computation. I actually didn't come up with that on my own, but one can see it make sense due to the nice input. By which we can have some assumptions.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use std::collections::{HashSet, VecDeque};
+<pre><code class="language-rs">use std::collections::{HashSet, VecDeque};
+use std::fs;
 
 type Grid&lt;T&gt; = Vec&lt;Vec&lt;T&gt;&gt;;
 type Position = (usize, usize);
@@ -178,119 +178,127 @@ const ROCK: i64 = -3;
 const EMPTY: i64 = -1;
 
 fn read_file(filepath: &amp;str) -&gt; (Grid&lt;bool&gt;, Position) {
-  let contents = fs::read_to_string(filepath);
-  let mut garden: Grid&lt;bool&gt; = vec![];
-  let mut start: Position = (0,0);
-  let binding = contents.expect("REASON");
-  let lines = binding.split('\n');
-  let mut i: usize = 0;
-  for line in lines{
-    let mut garden_line: Vec&lt;bool&gt; = vec!();
-    let mut j: usize = 0;
-    for c in line.chars(){
-      garden_line.push(c != '#');
-      if c == 'S' {
-        start = (i,j);
-      }
-      j += 1;
+    let contents = fs::read_to_string(filepath);
+    let mut garden: Grid&lt;bool&gt; = vec![];
+    let mut start: Position = (0, 0);
+    let binding = contents.expect("REASON");
+    let lines = binding.split('\n');
+    let mut i: usize = 0;
+    for line in lines {
+        let mut garden_line: Vec&lt;bool&gt; = vec![];
+        let mut j: usize = 0;
+        for c in line.chars() {
+            garden_line.push(c != '#');
+            if c == 'S' {
+                start = (i, j);
+            }
+            j += 1;
+        }
+        if garden_line.len() &gt; 0 {
+            garden.push(garden_line);
+        }
+        i += 1;
     }
-    if garden_line.len() &gt; 0 {
-      garden.push(garden_line);
-    }
-    i += 1;
-  }
-  (garden, start)
+    (garden, start)
 }
 
 fn add(a: usize, b: i8) -&gt; usize {
-  (a as i64 + b as i64) as usize
+    (a as i64 + b as i64) as usize
 }
 
 fn bfs(garden: &amp;Grid&lt;bool&gt;, position: Position) -&gt; Grid&lt;i64&gt; {
-  let mut distances: Grid&lt;i64&gt; = vec![];
-  for g in garden {
-    distances.push(vec![EMPTY; g.len()])
-  }
+    let mut distances: Grid&lt;i64&gt; = vec![];
+    for g in garden {
+        distances.push(vec![EMPTY; g.len()])
+    }
 
-  let mut visited: HashSet&lt;Position&gt; = HashSet::new();
-  visited.insert(position);
-  let neighbors: [(i8, i8); 4] = [(1, 0), (-1,0), (0,1), (0,-1)];
-  let mut queue: VecDeque&lt;(Position, i64)&gt; = VecDeque::new();
-  queue.push_back((position, 0));
+    let mut visited: HashSet&lt;Position&gt; = HashSet::new();
+    visited.insert(position);
+    let neighbors: [(i8, i8); 4] = [(1, 0), (-1, 0), (0, 1), (0, -1)];
+    let mut queue: VecDeque&lt;(Position, i64)&gt; = VecDeque::new();
+    queue.push_back((position, 0));
 
-  while !queue.is_empty() {
-    let (pos, counter) = queue.pop_front().unwrap();
-    if !garden[pos.0][pos.1] {
-      distances[pos.0][pos.1] = ROCK;
-      continue;
+    while !queue.is_empty() {
+        let (pos, counter) = queue.pop_front().unwrap();
+        if !garden[pos.0][pos.1] {
+            distances[pos.0][pos.1] = ROCK;
+            continue;
+        } else {
+            distances[pos.0][pos.1] = counter;
+        }
+        for n in neighbors {
+            let new_pos = (add(pos.0, n.0), add(pos.1, n.1));
+            if new_pos.0 &gt;= garden.len() || new_pos.1 &gt;= garden[new_pos.0].len() {
+                continue;
+            }
+            if !visited.contains(&amp;new_pos) {
+                queue.push_back((new_pos, counter + 1));
+                visited.insert(new_pos);
+            }
+        }
     }
-    else {
-      distances[pos.0][pos.1] = counter;
-    }
-    for n in neighbors {
-      let new_pos = (add(pos.0,n.0), add(pos.1,n.1));
-      if new_pos.0 &gt;= garden.len() || new_pos.1 &gt;= garden[new_pos.0].len() {
-        continue;
-      }
-      if !visited.contains(&amp;new_pos) {
-        queue.push_back((new_pos, counter + 1));
-        visited.insert(new_pos);
-      }
-    }
-  }
-  distances
+    distances
 }
 
 fn part1() {
-  let (garden, start) = read_file("INPUT");
-  let dist = bfs(&amp;garden, start);
-  let limit: i64 = 64;
-  let total = dist.into_iter()
-        .map(|vec| vec.into_iter()
-          .filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK &amp;&amp; x &lt;= &amp;limit)
-          .count())
+    let (garden, start) = read_file("INPUT");
+    let dist = bfs(&amp;garden, start);
+    let limit: i64 = 64;
+    let total = dist
+        .into_iter()
+        .map(|vec| {
+            vec.into_iter()
+                .filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK &amp;&amp; x &lt;= &amp;limit)
+                .count()
+        })
         .fold(0, |acc, sum| acc + sum);
-  println!("Part 1: {}", total);
+    println!("Part 1: {}", total);
 }
 
 fn part2() {
-  let (garden, start) = read_file("INPUT");
-  let dist = bfs(&amp;garden, start);
-  let magical_const: usize = 26501365;
-  let n: usize = magical_const / garden.len();
-  let limit: i64 = magical_const as i64 % garden.len() as i64;
-  let full_even = dist.clone().into_iter()
-        .map(|vec| vec.into_iter()
-          .filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK)
-          .count())
+    let (garden, start) = read_file("INPUT");
+    let dist = bfs(&amp;garden, start);
+    let magical_const: usize = 26501365;
+    let n: usize = magical_const / garden.len();
+    let limit: i64 = magical_const as i64 % garden.len() as i64;
+    let full_even = dist
+        .clone()
+        .into_iter()
+        .map(|vec| vec.into_iter().filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK).count())
         .fold(0, |acc, sum| acc + sum);
-  let full_odd = dist.clone().into_iter()
-        .map(|vec| vec.into_iter()
-          .filter(|x| x % 2 == 1 &amp;&amp; x != &amp;ROCK)
-          .count())
+    let full_odd = dist
+        .clone()
+        .into_iter()
+        .map(|vec| vec.into_iter().filter(|x| x % 2 == 1 &amp;&amp; x != &amp;ROCK).count())
         .fold(0, |acc, sum| acc + sum);
-  let corner_odd = dist.clone().into_iter()
-        .map(|vec| vec.into_iter()
-          .filter(|x| x % 2 == 1 &amp;&amp; x != &amp;ROCK &amp;&amp; x &gt; &amp;limit)
-          .count())
+    let corner_odd = dist
+        .clone()
+        .into_iter()
+        .map(|vec| {
+            vec.into_iter()
+                .filter(|x| x % 2 == 1 &amp;&amp; x != &amp;ROCK &amp;&amp; x &gt; &amp;limit)
+                .count()
+        })
         .fold(0, |acc, sum| acc + sum);
-  let corner_even = dist.clone().into_iter()
-        .map(|vec| vec.into_iter()
-          .filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK &amp;&amp; x &gt; &amp;limit)
-          .count())
+    let corner_even = dist
+        .clone()
+        .into_iter()
+        .map(|vec| {
+            vec.into_iter()
+                .filter(|x| x % 2 == 0 &amp;&amp; x != &amp;ROCK &amp;&amp; x &gt; &amp;limit)
+                .count()
+        })
         .fold(0, |acc, sum| acc + sum);
-  
-  let total = (n+1)*(n+1) * full_odd
-      + n*n * full_even
-      - (n+1) * corner_odd
-      + n * corner_even;
-  println!("Part 2: {}", total);
+
+    let total =
+        (n + 1) * (n + 1) * full_odd + n * n * full_even - (n + 1) * corner_odd + n * corner_even;
+    println!("Part 2: {}", total);
 }
 
 fn main() {
-  println!("Year 2023 day 21 - Step Counter");
-  part1();
-  part2();
+    println!("Year 2023 day 21 - Step Counter");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -298,11 +306,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2023-22.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2023-20.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-19.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023-22.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -312,11 +320,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2023-22.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2023-20.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-19.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023-22.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
