--- a/aoc/2015-5.html
+++ b/aoc/2015-5.html
@@ -162,63 +162,65 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>The second part is similiar only we use different regexes.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
+<pre><code class="language-rs">use fancy_regex::Regex as Rgx;
 use regex::Regex;
-use fancy_regex::Regex as Rgx;
+use std::fs;
 
 fn read_file(filepath: &amp;str) -&gt; Vec&lt;String&gt; {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  let lines = binding.split('\n')
-    .filter(|c| c.len() &gt; 0)
-    .map(|c| c.to_string()).collect();
-  lines
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    let lines = binding
+        .split('\n')
+        .filter(|c| c.len() &gt; 0)
+        .map(|c| c.to_string())
+        .collect();
+    lines
 }
 
 fn nice_string(lines: &amp;Vec&lt;String&gt;) -&gt; u64 {
-  let mut total: u64 = 0;
-  let vowels = Regex::new(r"a|e|i|o|u").unwrap();
-  let pairs = Rgx::new(r"([a-z])\1").unwrap();
-  let forb = Regex::new(r"ab|cd|pq|xy").unwrap();
-  for line in lines {
-    let nr_vowels = vowels.captures_iter(&amp;line).count();
-    let exists_pairs = pairs.is_match(&amp;line).unwrap();
-    let nr_forb = forb.captures_iter(&amp;line).count();
-    if nr_vowels &gt;= 3 &amp;&amp; exists_pairs &amp;&amp; nr_forb &lt;= 0 {
-      total += 1;
+    let mut total: u64 = 0;
+    let vowels = Regex::new(r"a|e|i|o|u").unwrap();
+    let pairs = Rgx::new(r"([a-z])\1").unwrap();
+    let forb = Regex::new(r"ab|cd|pq|xy").unwrap();
+    for line in lines {
+        let nr_vowels = vowels.captures_iter(&amp;line).count();
+        let exists_pairs = pairs.is_match(&amp;line).unwrap();
+        let nr_forb = forb.captures_iter(&amp;line).count();
+        if nr_vowels &gt;= 3 &amp;&amp; exists_pairs &amp;&amp; nr_forb &lt;= 0 {
+            total += 1;
+        }
     }
-  }
-  total
+    total
 }
 
 fn nicer_string(lines: &amp;Vec&lt;String&gt;) -&gt; u64 {
-  let mut total: u64 = 0;
-  let pairs = Rgx::new(r"([a-z]{2}).*\1").unwrap();
-  let middle = Rgx::new(r"([a-z])[a-z]\1").unwrap();
-  for line in lines {
-    let is_pair = pairs.is_match(&amp;line).unwrap();
-    let is_middle = middle.is_match(&amp;line).unwrap();
-    if is_pair &amp;&amp; is_middle {
-      total += 1;
+    let mut total: u64 = 0;
+    let pairs = Rgx::new(r"([a-z]{2}).*\1").unwrap();
+    let middle = Rgx::new(r"([a-z])[a-z]\1").unwrap();
+    for line in lines {
+        let is_pair = pairs.is_match(&amp;line).unwrap();
+        let is_middle = middle.is_match(&amp;line).unwrap();
+        if is_pair &amp;&amp; is_middle {
+            total += 1;
+        }
     }
-  }
-  total
+    total
 }
 
 fn part1() {
-  let lines = read_file("INPUT");
-  println!("Part 1: {}", nice_string(&amp;lines));
+    let lines = read_file("INPUT");
+    println!("Part 1: {}", nice_string(&amp;lines));
 }
 
 fn part2() {
-  let lines = read_file("INPUT");
-  println!("Part 2: {}", nicer_string(&amp;lines));
+    let lines = read_file("INPUT");
+    println!("Part 2: {}", nicer_string(&amp;lines));
 }
 
 fn main() {
-  println!("Year 2015 day 5 - Doesn't He Have Intern-Elves For This?");
-  part1();
-  part2();
+    println!("Year 2015 day 5 - Doesn't He Have Intern-Elves For This?");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -226,11 +228,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2015-6.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2015-4.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2015-4.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015-6.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -240,11 +242,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2015-6.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2015-4.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2015-4.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015-6.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
