--- a/aoc/2016-4.html
+++ b/aoc/2016-4.html
@@ -162,93 +162,104 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>In the second part we normally shift the alfa by the given <code>id</code> and check if is equal to <code>northpole object storage</code>.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use regex::Regex;
+<pre><code class="language-rs">use regex::Regex;
+use std::fs;
 
 const ALFA_LEN: usize = 'z' as usize - 'a' as usize + 1;
 
 struct Room {
-  name: String,
-  id: i64,
-  checksum: String,
+    name: String,
+    id: i64,
+    checksum: String,
 }
 
 fn shift_alfa(c: char, shift: i64) -&gt; char {
-  ((((c as i64 - 'a' as i64) + shift) % ALFA_LEN as i64) + 'a' as i64) as u8 as char
+    ((((c as i64 - 'a' as i64) + shift) % ALFA_LEN as i64) + 'a' as i64) as u8 as char
 }
 
 impl Room {
-  fn new(name: String, id: i64, checksum: String) -&gt; Self {
-    Room{name: name, id: id, checksum: checksum}
-  }
-  fn is_valid(&amp;self) -&gt; bool {
-    let mut counters: [u64; ALFA_LEN] = [0; ALFA_LEN];
-    for c in self.name.chars() {
-      if c != '-' &amp;&amp; c != ' ' {
-        let pos: usize = c as usize - 'a' as usize;
-        counters[pos] += 1;
-      }
+    fn new(name: String, id: i64, checksum: String) -&gt; Self {
+        Room {
+            name: name,
+            id: id,
+            checksum: checksum,
+        }
     }
-    let mut found: Vec&lt;(u64, char)&gt; = vec!();
-    for i in 0 .. ALFA_LEN {
-      if counters[i] &gt; 0 {
-        found.push((counters[i], ('a' as u8 + i as u8) as char));
-      }
+    fn is_valid(&amp;self) -&gt; bool {
+        let mut counters: [u64; ALFA_LEN] = [0; ALFA_LEN];
+        for c in self.name.chars() {
+            if c != '-' &amp;&amp; c != ' ' {
+                let pos: usize = c as usize - 'a' as usize;
+                counters[pos] += 1;
+            }
+        }
+        let mut found: Vec&lt;(u64, char)&gt; = vec![];
+        for i in 0..ALFA_LEN {
+            if counters[i] &gt; 0 {
+                found.push((counters[i], ('a' as u8 + i as u8) as char));
+            }
+        }
+        found.sort_by(|(c1, _), (c2, _)| c2.cmp(&amp;c1));
+        let mut cmp: String = "".to_string();
+        for f in found {
+            cmp.push(f.1);
+        }
+        cmp[..5] == self.checksum
     }
-    found.sort_by(|(c1, _), (c2, _)| c2.cmp(&amp;c1));
-    let mut cmp: String = "".to_string();
-    for f in found {
-      cmp.push(f.1);
+    fn decrypt(&amp;mut self) {
+        let mut builder: String = "".to_string();
+        for c in self.name.chars() {
+            if c == '-' {
+                builder.push(' ');
+            } else {
+                builder.push(shift_alfa(c, self.id));
+            }
+        }
+        self.name = builder.clone();
     }
-    cmp[..5] == self.checksum
-  }
-  fn decrypt(&amp;mut self) {
-    let mut builder: String = "".to_string();
-    for c in self.name.chars() {
-      if c == '-' {
-        builder.push(' ');
-      } else {
-        builder.push(shift_alfa(c, self.id));
-      }
-    }
-    self.name = builder.clone();
-  }
 }
 
 fn read_file(filepath: &amp;str) -&gt; Vec&lt;Room&gt; {
-  let contents = fs::read_to_string(filepath);
-  let mut rooms: Vec&lt;Room&gt; = vec!();
-  let binding = contents.expect("REASON");
-  let re = Regex::new(r"([a-z\-]+)-([0-9]+)\[([a-z]+)\]").unwrap();
-  for (_, [name, id, checksum]) in re.captures_iter(&amp;binding).map(|c| c.extract()) {
-    rooms.push(Room::new(name.to_string(), id.parse().unwrap(), checksum.to_string()));
-  }
-  rooms
+    let contents = fs::read_to_string(filepath);
+    let mut rooms: Vec&lt;Room&gt; = vec![];
+    let binding = contents.expect("REASON");
+    let re = Regex::new(r"([a-z\-]+)-([0-9]+)\[([a-z]+)\]").unwrap();
+    for (_, [name, id, checksum]) in re.captures_iter(&amp;binding).map(|c| c.extract()) {
+        rooms.push(Room::new(
+            name.to_string(),
+            id.parse().unwrap(),
+            checksum.to_string(),
+        ));
+    }
+    rooms
 }
 
 fn part1() {
-  let rooms = read_file("INPUT");
-  let res = rooms.into_iter().map(|r| if r.is_valid() {r.id} else {0}).sum::&lt;i64&gt;();
-  println!("Part 1: {}", res);
+    let rooms = read_file("INPUT");
+    let res = rooms
+        .into_iter()
+        .map(|r| if r.is_valid() { r.id } else { 0 })
+        .sum::&lt;i64&gt;();
+    println!("Part 1: {}", res);
 }
 
 fn part2() {
-  let mut rooms = read_file("INPUT");
-  let mut res: i64 = 0;
-  for room in &amp;mut rooms {
-    room.decrypt();
-    if room.name == "northpole object storage" {
-      res = room.id;
-      break;
+    let mut rooms = read_file("INPUT");
+    let mut res: i64 = 0;
+    for room in &amp;mut rooms {
+        room.decrypt();
+        if room.name == "northpole object storage" {
+            res = room.id;
+            break;
+        }
     }
-  }
-  println!("Part 2: {}", res);
+    println!("Part 2: {}", res);
 }
 
 fn main() {
-  println!("Year 2016 day 4 - Security Through Obscurity");
-  part1();
-  part2();
+    println!("Year 2016 day 4 - Security Through Obscurity");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -256,11 +267,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2016.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2016-3.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2016-3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -270,11 +281,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2016.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2016-3.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2016-3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
