--- a/aoc/2017-1.html
+++ b/aoc/2017-1.html
@@ -165,37 +165,37 @@
 <pre><code class="language-rs">use std::fs;
 
 fn read_file(filepath: &amp;str) -&gt; String {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  binding.split('\n').next().unwrap().to_string()
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    binding.split('\n').next().unwrap().to_string()
 }
 
 fn part1() {
-  let line = read_file("INPUT");
-  let mut total: u32 = 0;
-  for i in 0 .. line.len() {
-    if line.chars().nth(i) == line.chars().nth((i+1) % line.len()) {
-      total += line.chars().nth(i).unwrap().to_digit(10).unwrap();
+    let line = read_file("INPUT");
+    let mut total: u32 = 0;
+    for i in 0..line.len() {
+        if line.chars().nth(i) == line.chars().nth((i + 1) % line.len()) {
+            total += line.chars().nth(i).unwrap().to_digit(10).unwrap();
+        }
     }
-  }
-  println!("Part 1: {}", total);
+    println!("Part 1: {}", total);
 }
 
 fn part2() {
-  let line = read_file("INPUT");
-  let mut total: u32 = 0;
-  for i in 0 .. line.len() {
-    if line.chars().nth(i) == line.chars().nth((i + line.len() / 2) % line.len()) {
-      total += line.chars().nth(i).unwrap().to_digit(10).unwrap();
+    let line = read_file("INPUT");
+    let mut total: u32 = 0;
+    for i in 0..line.len() {
+        if line.chars().nth(i) == line.chars().nth((i + line.len() / 2) % line.len()) {
+            total += line.chars().nth(i).unwrap().to_digit(10).unwrap();
+        }
     }
-  }
-  println!("Part 2: {}", total);
+    println!("Part 2: {}", total);
 }
 
 fn main() {
-  println!("Year 2017 day 1 - Inverse Captcha");
-  part1();
-  part2();
+    println!("Year 2017 day 1 - Inverse Captcha");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -203,11 +203,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2017-2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2017.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2016.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2017-2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -217,11 +217,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2017-2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2017.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2016.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2017-2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
