--- a/aoc/2022-10.html
+++ b/aoc/2022-10.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 day 25 - Personal page</title>
+        <title>Year 2022 day 10 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,150 +154,60 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023-day-25"><a class="header" href="#advent-of-code---year-2023-day-25">Advent of code - Year 2023 Day 25</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2023/day/25">day 25</a>. Go back to year <a href="2023.html">2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
-<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>The first part is done by <a href="https://graphviz.org/doc/info/lang.html">graphviz dot language</a>. So the code creates a file <code>graph.dot</code> than you run <code>dot -Kneato -Tsvg graph.dot -o graph.svg</code>. You find the three pairs forming the min cut and manually insert it into the code. Then you ran the code again.</p>
-<p>The alternate algorithm is to use <a href="https://en.wikipedia.org/wiki/Karger%27s_algorithm">Karger-Steins</a> approximation algorithm. This I didn't make.</p>
-<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p><strong>PUSH THE RED BUTTON.</strong></p>
-<h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::collections::{HashSet, VecDeque};
-use std::fs;
-use std::io::Write;
+                        <h1 id="advent-of-code---year-2022-day-10"><a class="header" href="#advent-of-code---year-2022-day-10">Advent of code - Year 2022 Day 10</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2022/day/10">day 10</a>. Go back to year <a href="2022.html">2022</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h2 id="mainpy"><a class="header" href="#mainpy">main.py</a></h2>
+<pre><code class="language-py">#!/usr/bin/env python3
 
-struct Wire {
-    start: String,
-    ends: Vec&lt;String&gt;,
-}
+round_count = 0
+X = 1
+total_sum = 0
+CHECKING = [20,60,100,140,180,220]
+drawing = [[False for _ in range(40)] for _ in range(7)]
+sprite = [-1,0,1]
 
-fn parse_wire(line: &amp;str) -&gt; Wire {
-    let from_to: Vec&lt;&amp;str&gt; = line.split(": ").collect();
-    let mut wire = Wire {
-        start: from_to[0].to_string(),
-        ends: vec![],
-    };
-    let parts: Vec&lt;&amp;str&gt; = from_to[1].split(' ').collect();
-    for p in parts {
-        wire.ends.push(p.to_string());
-    }
-    wire
-}
+def step(rc, drw, spr, x, ts):
+  mod = rc % 40
+  div = rc // 40
+  rc += 1
+  drw[div][mod] = (mod in spr)
+  if rc in CHECKING:
+    ts += (rc * x)
+  return rc, drw, spr, x, ts
 
-fn read_file(filepath: &amp;str) -&gt; Vec&lt;Wire&gt; {
-    let contents = fs::read_to_string(filepath);
-    let mut wires: Vec&lt;Wire&gt; = vec![];
-    let binding = contents.expect("REASON");
-    let lines = binding.split('\n');
-    for line in lines {
-        if line != "" {
-            wires.push(parse_wire(line));
-        }
-    }
-    wires
-}
-
-fn create_graphviz(filepath: &amp;str, wires: &amp;Vec&lt;Wire&gt;) {
-    let file = fs::File::create(filepath);
-    match writeln!(file.as_ref().expect("REASON"), "{}", "graph AOC25 {") {
-        Ok(()) =&gt; {}
-        Err(..) =&gt; return,
-    }
-    for wire in wires {
-        for end in &amp;wire.ends {
-            match writeln!(
-                file.as_ref().expect("REASON"),
-                "{}",
-                format!("  {} -- {};", wire.start, end)
-            ) {
-                Ok(()) =&gt; {}
-                Err(..) =&gt; return,
-            }
-        }
-    }
-    match writeln!(file.as_ref().expect("REASON"), "{}", "}") {
-        Ok(()) =&gt; {}
-        Err(..) =&gt; return,
-    }
-}
-
-fn is_forb(w1: &amp;str, w2: &amp;str, forb: &amp;[(&amp;str, &amp;str); 3]) -&gt; bool {
-    for f in forb {
-        if (f.0 == w1 &amp;&amp; f.1 == w2) || (f.1 == w1 &amp;&amp; f.0 == w2) {
-            return true;
-        }
-    }
-    false
-}
-
-fn partitions(wires: &amp;Vec&lt;Wire&gt;, forb: &amp;[(&amp;str, &amp;str); 3]) -&gt; u64 {
-    let mut found: HashSet&lt;String&gt; = HashSet::new();
-    let mut queue: VecDeque&lt;String&gt; = VecDeque::new();
-    found.insert(wires[0].start.clone());
-    queue.push_back(wires[0].start.clone());
-    while !queue.is_empty() {
-        let wire = queue.pop_front().unwrap();
-        for w in wires {
-            if wire == w.start {
-                for e in &amp;w.ends {
-                    if !is_forb(&amp;wire, &amp;e.clone(), forb) &amp;&amp; !found.contains(&amp;e.clone()) {
-                        found.insert(e.clone());
-                        queue.push_back(e.clone());
-                    }
-                }
-            } else if w.ends.clone().into_iter().filter(|e| &amp;wire == e).count() &gt; 0 {
-                for e in &amp;w.ends {
-                    if &amp;wire == e
-                        &amp;&amp; !is_forb(&amp;w.start, &amp;e.clone(), forb)
-                        &amp;&amp; !found.contains(&amp;w.start)
-                    {
-                        found.insert(w.start.clone());
-                        queue.push_back(w.start.clone());
-                    }
-                }
-            }
-        }
-    }
-    let mut all: HashSet&lt;String&gt; = HashSet::new();
-    for w in wires {
-        all.insert(w.start.clone());
-        for e in &amp;w.ends {
-            all.insert(e.clone());
-        }
-    }
-    (found.len() * (all.len() - found.len())) as u64
-}
-
-fn part1() {
-    let wires = read_file("INPUT");
-    create_graphviz("graph.dot", &amp;wires);
-    // This is only my solution. Run `dot -Kneato -Tsvg graph.dot -o graph.svg` to create your graph.
-    let forb: [(&amp;str, &amp;str); 3] = [("dlv", "tqh"), ("ngp", "bmd"), ("tqr", "grd")];
-    println!("Run `dot -Kneato -Tsvg graph.dot -o graph.svg` to see three edges.");
-    println!("Part 1: {}", partitions(&amp;wires, &amp;forb));
-}
-
-fn part2() {
-    println!("Part 2: {}", "PUSH THE RED BUTTON.");
-}
-
-fn main() {
-    println!("Year 2023 day 25 - Snowverload");
-    part1();
-    part2();
-}
+with open("INPUT") as f:
+  for line in f:
+    if line == '\n':
+      continue
+    if line == 'noop\n':
+      round_count, drawing, sprite, X, total_sum = step(round_count, drawing, sprite, X, total_sum)
+    else:
+      parts = line.split(" ")
+      round_count, drawing, sprite, X, total_sum = step(round_count, drawing, sprite, X, total_sum)
+      round_count, drawing, sprite, X, total_sum = step(round_count, drawing, sprite, X, total_sum)
+      X += int(parts[1])
+      sprite = [X-1, X, X+1]
+      
+print(f"Prvni: {total_sum}")
+print(f"Druhy: [RZHFGJCB]")
+for i in range(len(drawing)):
+  for j in range(len(drawing[i])):
+    if drawing[i][j]:
+      print('#', end = "")
+    else:
+      print('.', end = "")
+  print()
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2023-24.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2022-9.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2022.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2022-11.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -307,11 +217,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2023-24.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2022-9.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2022.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2022-11.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
