--- a/aoc/2023-19.html
+++ b/aoc/2023-19.html
@@ -163,9 +163,9 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>In the second part we had to use the same aproach only to compute the intervals not just single numbers. But it is very similiar, since we just split parts on each comparison and recursively called to the next step.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
+<pre><code class="language-rs">use std::cmp::{max, min};
 use std::collections::HashMap;
-use std::cmp::{min, max};
+use std::fs;
 
 const X: usize = 0;
 const M: usize = 1;
@@ -175,278 +175,287 @@ const INV: usize = 5;
 
 type Part = [i64; 4];
 
-type BoundPart = [(i64,i64); 4];
+type BoundPart = [(i64, i64); 4];
 
 enum Compare {
-  LessThan,
-  MoreThan,
-  True,
+    LessThan,
+    MoreThan,
+    True,
 }
 
 struct Rule {
-  considering: usize,
-  compare: Compare,
-  number: i64,
-  next_state: String,
-  accepting: bool,
-  rejecting: bool,
+    considering: usize,
+    compare: Compare,
+    number: i64,
+    next_state: String,
+    accepting: bool,
+    rejecting: bool,
 }
 
 type State = Vec&lt;Rule&gt;;
 
 fn get_considering(c: char) -&gt; usize {
-  match c {
-    'x' =&gt; return X,
-    'm' =&gt; return M,
-    'a' =&gt; return A,
-    's' =&gt; return S,
-     _  =&gt; return INV,
-   }
- }
+    match c {
+        'x' =&gt; return X,
+        'm' =&gt; return M,
+        'a' =&gt; return A,
+        's' =&gt; return S,
+        _ =&gt; return INV,
+    }
+}
 
 fn parse_rule(line: &amp;str) -&gt; Rule {
-  let splitted = line.split(':');
-  let parts: Vec&lt;&amp;str&gt; = splitted.collect();
-  if parts.len() == 1 as usize {
-    let new_state = parts[0];
+    let splitted = line.split(':');
+    let parts: Vec&lt;&amp;str&gt; = splitted.collect();
+    if parts.len() == 1 as usize {
+        let new_state = parts[0];
+        if new_state == "A" {
+            return Rule {
+                considering: INV,
+                compare: Compare::True,
+                number: 0,
+                next_state: "".to_string(),
+                accepting: true,
+                rejecting: false,
+            };
+        } else if new_state == "R" {
+            return Rule {
+                considering: INV,
+                compare: Compare::True,
+                number: 0,
+                next_state: "".to_string(),
+                accepting: false,
+                rejecting: true,
+            };
+        } else {
+            return Rule {
+                considering: INV,
+                compare: Compare::True,
+                number: 0,
+                next_state: new_state.to_string(),
+                accepting: false,
+                rejecting: false,
+            };
+        }
+    }
+    let binding = parts[0].to_string();
+    let considering = get_considering(binding.chars().nth(0).unwrap());
+    let compare: Compare;
+    match binding.chars().nth(1).unwrap() {
+        '&lt;' =&gt; compare = Compare::LessThan,
+        '&gt;' =&gt; compare = Compare::MoreThan,
+        _ =&gt; compare = Compare::True,
+    }
+    let number = i64::from_str_radix(&amp;binding[2..], 10).unwrap();
+    let new_state = parts[1].to_string();
     if new_state == "A" {
-      return Rule {considering: INV,
-        compare: Compare::True,
-        number: 0,
-        next_state: "".to_string(),
-        accepting: true,
-        rejecting: false};
+        return Rule {
+            considering: considering,
+            compare: compare,
+            number: number,
+            next_state: "".to_string(),
+            accepting: true,
+            rejecting: false,
+        };
+    } else if new_state == "R" {
+        return Rule {
+            considering: considering,
+            compare: compare,
+            number: number,
+            next_state: "".to_string(),
+            accepting: false,
+            rejecting: true,
+        };
+    } else {
+        return Rule {
+            considering: considering,
+            compare: compare,
+            number: number,
+            next_state: new_state,
+            accepting: false,
+            rejecting: false,
+        };
     }
-    else if new_state == "R" {
-      return Rule {considering: INV,
-        compare: Compare::True,
-        number: 0,
-        next_state: "".to_string(),
-        accepting: false,
-        rejecting: true};
-    }
-    else {
-      return Rule {considering: INV,
-        compare: Compare::True,
-        number: 0,
-        next_state: new_state.to_string(),
-        accepting: false,
-        rejecting: false};
-    }
-  }
-  let binding = parts[0].to_string();
-  let considering = get_considering(binding.chars().nth(0).unwrap());
-  let compare: Compare;
-  match binding.chars().nth(1).unwrap() {
-    '&lt;' =&gt; compare = Compare::LessThan,
-    '&gt;' =&gt; compare = Compare::MoreThan,
-    _   =&gt; compare = Compare::True,
-  }
-  let number = i64::from_str_radix(&amp;binding[2 ..], 10).unwrap();
-  let new_state = parts[1].to_string();
-  if new_state == "A" {
-    return Rule {considering: considering,
-      compare: compare,
-      number: number,
-      next_state: "".to_string(),
-      accepting: true,
-      rejecting: false};
-  }
-  else if new_state == "R" {
-    return Rule {considering: considering,
-      compare: compare,
-      number: number,
-      next_state: "".to_string(),
-      accepting: false,
-      rejecting: true};
-  }
-  else {
-    return Rule {considering: considering,
-      compare: compare,
-      number: number,
-      next_state: new_state,
-      accepting: false,
-      rejecting: false};
-  }
 }
 
 fn parse_state(line: &amp;str) -&gt; (String, State) {
-  let mut parts = line.split('{');
-  let string = parts.next().unwrap().to_string();
-  let mut rules: Vec&lt;Rule&gt; = vec!();
-  let binding = parts.next().unwrap().to_string();
-  let rule = &amp;binding[0 .. binding.len() - 1];
-  for r in rule.split(',') {
-    rules.push(parse_rule(r));
-  }
-  (string, rules)
+    let mut parts = line.split('{');
+    let string = parts.next().unwrap().to_string();
+    let mut rules: Vec&lt;Rule&gt; = vec![];
+    let binding = parts.next().unwrap().to_string();
+    let rule = &amp;binding[0..binding.len() - 1];
+    for r in rule.split(',') {
+        rules.push(parse_rule(r));
+    }
+    (string, rules)
 }
 
 fn parse_part(line: &amp;str) -&gt; Part {
-  let interior = &amp;line[1 .. line.len() - 1];
-  let values: Vec&lt;&amp;str&gt; = interior.split(',').collect();
-  let mut part: Part = [0; 4];
-  for val in values {
-    match val.chars().nth(0).unwrap() {
-      'x' =&gt; part[X] = i64::from_str_radix(&amp;val[2 ..], 10).unwrap(),
-      'm' =&gt; part[M] = i64::from_str_radix(&amp;val[2 ..], 10).unwrap(),
-      'a' =&gt; part[A] = i64::from_str_radix(&amp;val[2 ..], 10).unwrap(),
-      's' =&gt; part[S] = i64::from_str_radix(&amp;val[2 ..], 10).unwrap(),
-       _  =&gt; todo!(),
+    let interior = &amp;line[1..line.len() - 1];
+    let values: Vec&lt;&amp;str&gt; = interior.split(',').collect();
+    let mut part: Part = [0; 4];
+    for val in values {
+        match val.chars().nth(0).unwrap() {
+            'x' =&gt; part[X] = i64::from_str_radix(&amp;val[2..], 10).unwrap(),
+            'm' =&gt; part[M] = i64::from_str_radix(&amp;val[2..], 10).unwrap(),
+            'a' =&gt; part[A] = i64::from_str_radix(&amp;val[2..], 10).unwrap(),
+            's' =&gt; part[S] = i64::from_str_radix(&amp;val[2..], 10).unwrap(),
+            _ =&gt; todo!(),
+        }
     }
-  }
-  part
+    part
 }
 
 fn read_file(filepath: &amp;str) -&gt; (HashMap&lt;String, State&gt;, Vec&lt;Part&gt;) {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  let lines = binding.split('\n');
-  let mut parts: Vec&lt;Part&gt; = vec!();
-  let mut hash_map: HashMap&lt;String, State&gt; = HashMap::new();
-  let mut first_part: bool = true;
-  for line in lines{
-    if line == "" {
-      first_part = false;
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    let lines = binding.split('\n');
+    let mut parts: Vec&lt;Part&gt; = vec![];
+    let mut hash_map: HashMap&lt;String, State&gt; = HashMap::new();
+    let mut first_part: bool = true;
+    for line in lines {
+        if line == "" {
+            first_part = false;
+        } else if first_part {
+            let (string, state) = parse_state(&amp;line);
+            hash_map.insert(string, state);
+        } else {
+            parts.push(parse_part(line));
+        }
     }
-    else if first_part {
-      let (string, state) = parse_state(&amp;line);
-      hash_map.insert(string, state);
-    }
-    else {
-      parts.push(parse_part(line));
-    }
-  }
-  (hash_map, parts)
+    (hash_map, parts)
 }
 
 fn process_part(hash_map: &amp;HashMap&lt;String, State&gt;, part: Part) -&gt; i64 {
-  let mut string = "in";
-  let ret: i64 = part[X] + part[M] + part[A] + part[S];
-  loop {
-    let state = &amp;hash_map[string];
-    for rule in state {
-      match rule.compare {
-        Compare::LessThan =&gt; {
-          if part[rule.considering] &lt; rule.number {
-            if rule.accepting {
-              return ret;
+    let mut string = "in";
+    let ret: i64 = part[X] + part[M] + part[A] + part[S];
+    loop {
+        let state = &amp;hash_map[string];
+        for rule in state {
+            match rule.compare {
+                Compare::LessThan =&gt; {
+                    if part[rule.considering] &lt; rule.number {
+                        if rule.accepting {
+                            return ret;
+                        } else if rule.rejecting {
+                            return 0;
+                        }
+                        string = &amp;rule.next_state;
+                        break;
+                    }
+                }
+                Compare::MoreThan =&gt; {
+                    if part[rule.considering] &gt; rule.number {
+                        if rule.accepting {
+                            return ret;
+                        } else if rule.rejecting {
+                            return 0;
+                        }
+                        string = &amp;rule.next_state;
+                        break;
+                    }
+                }
+                Compare::True =&gt; {
+                    if rule.accepting {
+                        return ret;
+                    } else if rule.rejecting {
+                        return 0;
+                    }
+                    string = &amp;rule.next_state;
+                    break;
+                }
             }
-            else if rule.rejecting {
-              return 0;
-            }
-            string = &amp;rule.next_state;
-            break;
-          }
         }
-        Compare::MoreThan =&gt; {
-          if part[rule.considering] &gt; rule.number {
-            if rule.accepting {
-              return ret;
-            }
-            else if rule.rejecting {
-              return 0;
-            }
-            string = &amp;rule.next_state;
-            break;
-          }
-        }
-        Compare::True =&gt; {
-          if rule.accepting {
-            return ret;
-          }
-          else if rule.rejecting {
-            return 0;
-          }
-          string = &amp;rule.next_state;
-          break;
-        }
-      }
     }
-  }
 }
 
 fn check_bound(bound: (i64, i64)) -&gt; bool {
-  bound.1 &gt; bound.0
+    bound.1 &gt; bound.0
 }
 
 fn count_possibilites(bounds: &amp;BoundPart) -&gt; i64 {
-  let res = (bounds[X].1 - bounds[X].0) * (bounds[M].1 - bounds[M].0) * (bounds[A].1 - bounds[A].0) * (bounds[S].1 - bounds[S].0);
-  res
+    let res = (bounds[X].1 - bounds[X].0)
+        * (bounds[M].1 - bounds[M].0)
+        * (bounds[A].1 - bounds[A].0)
+        * (bounds[S].1 - bounds[S].0);
+    res
 }
 
 fn process_bounds(hash_map: &amp;HashMap&lt;String, State&gt;, bounds: &amp;mut BoundPart, string: &amp;str) -&gt; i64 {
-  let mut total: i64 = 0;
-  let state = &amp;hash_map[string];
-  for rule in state {
-    match rule.compare {
-      Compare::LessThan =&gt; {
-        let part1 = (bounds[rule.considering].0, rule.number);
-        let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
-        bounds[rule.considering] = (max(rule.number, bounds[rule.considering].0), bounds[rule.considering].1);
-        new_bounds[rule.considering] = part1;
-        if check_bound(part1){
-          if rule.accepting {
-            total += count_possibilites(&amp;new_bounds);
-          }
-          else if rule.rejecting {
-            total += 0;
-          }
-          else {
-            total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
-          }
+    let mut total: i64 = 0;
+    let state = &amp;hash_map[string];
+    for rule in state {
+        match rule.compare {
+            Compare::LessThan =&gt; {
+                let part1 = (bounds[rule.considering].0, rule.number);
+                let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
+                bounds[rule.considering] = (
+                    max(rule.number, bounds[rule.considering].0),
+                    bounds[rule.considering].1,
+                );
+                new_bounds[rule.considering] = part1;
+                if check_bound(part1) {
+                    if rule.accepting {
+                        total += count_possibilites(&amp;new_bounds);
+                    } else if rule.rejecting {
+                        total += 0;
+                    } else {
+                        total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
+                    }
+                }
+            }
+            Compare::MoreThan =&gt; {
+                let part1 = (rule.number + 1, bounds[rule.considering].1);
+                let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
+                bounds[rule.considering] = (
+                    bounds[rule.considering].0,
+                    min(rule.number + 1, bounds[rule.considering].1),
+                );
+                new_bounds[rule.considering] = part1;
+                if check_bound(part1) {
+                    if rule.accepting {
+                        total += count_possibilites(&amp;new_bounds);
+                    } else if rule.rejecting {
+                        total += 0;
+                    } else {
+                        total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
+                    }
+                }
+            }
+            Compare::True =&gt; {
+                let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
+                if rule.accepting {
+                    total += count_possibilites(&amp;bounds);
+                } else if rule.rejecting {
+                    total += 0;
+                } else {
+                    total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
+                }
+            }
         }
-      }
-      Compare::MoreThan =&gt; {
-        let part1 = (rule.number + 1, bounds[rule.considering].1);
-        let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
-        bounds[rule.considering] = (bounds[rule.considering].0, min(rule.number + 1, bounds[rule.considering].1));
-        new_bounds[rule.considering] = part1;
-        if check_bound(part1){
-          if rule.accepting {
-            total += count_possibilites(&amp;new_bounds);
-          }
-          else if rule.rejecting {
-            total += 0;
-          }
-          else {
-            total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
-          }
-        }
-      }
-      Compare::True =&gt; {
-        let mut new_bounds = [bounds[X], bounds[M], bounds[A], bounds[S]];
-        if rule.accepting {
-          total += count_possibilites(&amp;bounds);
-        }
-        else if rule.rejecting {
-          total += 0;
-        }
-        else {
-          total += process_bounds(hash_map, &amp;mut new_bounds, &amp;rule.next_state);
-        }
-      }
     }
-  }
-  total
+    total
 }
 
 fn part1() {
-  let (hash_map, parts) = read_file("INPUT");
-  let results: Vec&lt;i64&gt; = parts.into_iter().map(|p| process_part(&amp;hash_map, p)).collect();
-  println!("Part 1: {}", results.iter().sum::&lt;i64&gt;());
+    let (hash_map, parts) = read_file("INPUT");
+    let results: Vec&lt;i64&gt; = parts
+        .into_iter()
+        .map(|p| process_part(&amp;hash_map, p))
+        .collect();
+    println!("Part 1: {}", results.iter().sum::&lt;i64&gt;());
 }
 
 fn part2() {
-  let (hash_map, _) = read_file("INPUT");
-  let mut part: BoundPart = [(1, 4001); 4];
-  println!("Part 2: {}", process_bounds(&amp;hash_map, &amp;mut part, "in"));
+    let (hash_map, _) = read_file("INPUT");
+    let mut part: BoundPart = [(1, 4001); 4];
+    println!("Part 2: {}", process_bounds(&amp;hash_map, &amp;mut part, "in"));
 }
 
 fn main() {
-  println!("Year 2023 day 19 - Aplenty");
-  part1();
-  part2();
+    println!("Year 2023 day 19 - Aplenty");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -454,11 +463,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2023-21.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2023-18.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-18.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023-20.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -468,11 +477,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2023-21.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2023-18.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-18.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023-20.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
