--- a/aoc/2023-22.html
+++ b/aoc/2023-22.html
@@ -162,146 +162,151 @@
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>We use the already written code to construct such bricks. After that we look on every brick and remove it. Then see if any bricks that were supported by this will fall (so the <strong>interection</strong> with the <code>supported_by</code> contains all of them. Then we follow on these bricks until they stay in place.</p>
 <h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::fs;
-use std::collections::{HashSet, HashMap, VecDeque};
+<pre><code class="language-rs">use std::collections::{HashMap, HashSet, VecDeque};
+use std::fs;
 
 struct Brick {
-  x: (i64, i64),
-  y: (i64, i64),
-  z: (i64, i64),
-  supports: HashSet&lt;usize&gt;,
-  supported_by: HashSet&lt;usize&gt;,
+    x: (i64, i64),
+    y: (i64, i64),
+    z: (i64, i64),
+    supports: HashSet&lt;usize&gt;,
+    supported_by: HashSet&lt;usize&gt;,
 }
 
 fn parse_numbers(line: &amp;str) -&gt; (i64, i64, i64) {
-  let parts: Vec&lt;&amp;str&gt; = line.split(',').into_iter().collect();
-  (i64::from_str_radix(&amp;parts[0], 10).unwrap(),
-   i64::from_str_radix(&amp;parts[1], 10).unwrap(),
-   i64::from_str_radix(&amp;parts[2], 10).unwrap())
+    let parts: Vec&lt;&amp;str&gt; = line.split(',').into_iter().collect();
+    (
+        i64::from_str_radix(&amp;parts[0], 10).unwrap(),
+        i64::from_str_radix(&amp;parts[1], 10).unwrap(),
+        i64::from_str_radix(&amp;parts[2], 10).unwrap(),
+    )
 }
 
 fn parse_brick(line: &amp;str) -&gt; Brick {
-  let parts: Vec&lt;&amp;str&gt; = line.split('~').into_iter().collect();
-  let (x1, y1, z1) = parse_numbers(parts[0]);
-  let (x2, y2, z2) = parse_numbers(parts[1]);
-  Brick { x: (x1, x2),
+    let parts: Vec&lt;&amp;str&gt; = line.split('~').into_iter().collect();
+    let (x1, y1, z1) = parse_numbers(parts[0]);
+    let (x2, y2, z2) = parse_numbers(parts[1]);
+    Brick {
+        x: (x1, x2),
         y: (y1, y2),
         z: (z1, z2),
         supported_by: HashSet::new(),
-        supports: HashSet::new()}
+        supports: HashSet::new(),
+    }
 }
 
 fn read_file(filepath: &amp;str) -&gt; Vec&lt;Brick&gt; {
-  let contents = fs::read_to_string(filepath);
-  let mut bricks: Vec&lt;Brick&gt; = vec!();
-  let binding = contents.expect("REASON");
-  let lines = binding.split('\n');
-  for line in lines{
-    if line != "" {
-      bricks.push(parse_brick(line));
+    let contents = fs::read_to_string(filepath);
+    let mut bricks: Vec&lt;Brick&gt; = vec![];
+    let binding = contents.expect("REASON");
+    let lines = binding.split('\n');
+    for line in lines {
+        if line != "" {
+            bricks.push(parse_brick(line));
+        }
     }
-  }
-  bricks
+    bricks
 }
 
 fn overlap(b1: &amp;Brick, b2: &amp;Brick) -&gt; bool {
-  b1.x.0 &lt;= b2.x.1 &amp;&amp; b1.x.1 &gt;= b2.x.0 &amp;&amp; b1.y.0 &lt;= b2.y.1 &amp;&amp; b1.y.1 &gt;= b2.y.0
+    b1.x.0 &lt;= b2.x.1 &amp;&amp; b1.x.1 &gt;= b2.x.0 &amp;&amp; b1.y.0 &lt;= b2.y.1 &amp;&amp; b1.y.1 &gt;= b2.y.0
 }
 
 fn compress_bricks(bricks: &amp;mut Vec&lt;Brick&gt;) {
-  for i in 0 .. bricks.len() {
-    let mut max: i64 = 0;
-    for j in 0 .. i {
-      if bricks[j].z.1 &gt; max &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
-        max = bricks[j].z.1;
-      }
+    for i in 0..bricks.len() {
+        let mut max: i64 = 0;
+        for j in 0..i {
+            if bricks[j].z.1 &gt; max &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
+                max = bricks[j].z.1;
+            }
+        }
+        max += 1;
+        bricks[i].z.1 = bricks[i].z.1 - bricks[i].z.0 + max;
+        bricks[i].z.0 = max;
     }
-    max += 1;
-    bricks[i].z.1 = bricks[i].z.1 - bricks[i].z.0 + max;
-    bricks[i].z.0 = max;
-  }
 }
 
 fn create_supports(bricks: &amp;mut Vec&lt;Brick&gt;) {
-  for i in 0 .. bricks.len() {
-    for j in 0 .. bricks.len() {
-      if bricks[j].z.1 == bricks[i].z.0 - 1 &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
-        bricks[i].supported_by.insert(j);
-      }
-      if bricks[i].z.1 + 1 == bricks[j].z.0 &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
-        bricks[i].supports.insert(j);
-      }
+    for i in 0..bricks.len() {
+        for j in 0..bricks.len() {
+            if bricks[j].z.1 == bricks[i].z.0 - 1 &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
+                bricks[i].supported_by.insert(j);
+            }
+            if bricks[i].z.1 + 1 == bricks[j].z.0 &amp;&amp; overlap(&amp;bricks[i], &amp;bricks[j]) {
+                bricks[i].supports.insert(j);
+            }
+        }
     }
-  }
 }
 
 fn count_overlaps(bricks: &amp;mut Vec&lt;Brick&gt;) -&gt; usize {
-  let mut hash_map: HashMap&lt;usize, bool&gt; = HashMap::new();
-  for i in 0 .. bricks.len() {
-    if bricks[i].supported_by.len() &gt; 1 {
-      for s in &amp;bricks[i].supported_by {
-        if !hash_map.contains_key(s) {
-          hash_map.insert(*s, true);
+    let mut hash_map: HashMap&lt;usize, bool&gt; = HashMap::new();
+    for i in 0..bricks.len() {
+        if bricks[i].supported_by.len() &gt; 1 {
+            for s in &amp;bricks[i].supported_by {
+                if !hash_map.contains_key(s) {
+                    hash_map.insert(*s, true);
+                }
+            }
+        } else {
+            for s in &amp;bricks[i].supported_by {
+                hash_map.insert(*s, false);
+            }
         }
-      }
+        if bricks[i].supports.len() == 0 {
+            if !hash_map.contains_key(&amp;i) {
+                hash_map.insert(i, true);
+            }
+        }
     }
-    else {
-      for s in &amp;bricks[i].supported_by {
-        hash_map.insert(*s, false);
-      }
-    }
-    if bricks[i].supports.len() == 0 {
-      if !hash_map.contains_key(&amp;i) {
-        hash_map.insert(i, true);
-      }
-    }
-  }
-  hash_map.into_iter().filter(|a| a.1).count()
+    hash_map.into_iter().filter(|a| a.1).count()
 }
 
 fn count_disintegration(bricks: &amp;Vec&lt;Brick&gt;) -&gt; usize {
-  let mut total: usize = 0;
-  for i in 0 .. bricks.len() {
-    let mut set: HashSet&lt;usize&gt; = HashSet::new();
-    let mut queue: VecDeque&lt;usize&gt; = VecDeque::new();
-    set.insert(i);
-    queue.push_back(i);
-    while !queue.is_empty() {
-      let brick = queue.pop_front().unwrap();
-      for b in &amp;bricks[brick].supports {
-        if set.intersection(&amp;bricks[*b].supported_by).count() == bricks[*b].supported_by.len() {
-          if !set.contains(b) {
-            queue.push_back(*b);
-            set.insert(*b);
-          }
+    let mut total: usize = 0;
+    for i in 0..bricks.len() {
+        let mut set: HashSet&lt;usize&gt; = HashSet::new();
+        let mut queue: VecDeque&lt;usize&gt; = VecDeque::new();
+        set.insert(i);
+        queue.push_back(i);
+        while !queue.is_empty() {
+            let brick = queue.pop_front().unwrap();
+            for b in &amp;bricks[brick].supports {
+                if set.intersection(&amp;bricks[*b].supported_by).count()
+                    == bricks[*b].supported_by.len()
+                {
+                    if !set.contains(b) {
+                        queue.push_back(*b);
+                        set.insert(*b);
+                    }
+                }
+            }
         }
-      }
+        total += set.len() - 1;
     }
-    total += set.len() - 1;
-  }
-  total
+    total
 }
 
 fn part1() {
-  let mut bricks = read_file("INPUT");
-  bricks.sort_by(|a, b| a.z.cmp(&amp;b.z));
-  compress_bricks(&amp;mut bricks);
-  create_supports(&amp;mut bricks);
-  println!("Part 1: {}", count_overlaps(&amp;mut bricks));
+    let mut bricks = read_file("INPUT");
+    bricks.sort_by(|a, b| a.z.cmp(&amp;b.z));
+    compress_bricks(&amp;mut bricks);
+    create_supports(&amp;mut bricks);
+    println!("Part 1: {}", count_overlaps(&amp;mut bricks));
 }
 
 fn part2() {
-  let mut bricks = read_file("INPUT");
-  bricks.sort_by(|a, b| a.z.cmp(&amp;b.z));
-  compress_bricks(&amp;mut bricks);
-  create_supports(&amp;mut bricks);
-  println!("Part 2: {}", count_disintegration(&amp;bricks));
+    let mut bricks = read_file("INPUT");
+    bricks.sort_by(|a, b| a.z.cmp(&amp;b.z));
+    compress_bricks(&amp;mut bricks);
+    create_supports(&amp;mut bricks);
+    println!("Part 2: {}", count_disintegration(&amp;bricks));
 }
 
 fn main() {
-  println!("Year 2023 day 22 - Sand Slabs");
-  part1();
-  part2();
+    println!("Year 2023 day 22 - Sand Slabs");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -309,11 +314,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2023-23.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2023-21.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-21.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023-23.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -323,11 +328,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2023-23.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2023-21.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-21.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023-23.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
