--- a/aoc/2023-24.html
+++ b/aoc/2023-24.html
@@ -167,109 +167,123 @@ use z3::ast::{Ast, Int};
 use z3::{Config, Context, Solver};
 
 struct HailStone {
-  x: i64,
-  y: i64,
-  z: i64,
-  xv: i64,
-  yv: i64,
-  zv: i64,
+    x: i64,
+    y: i64,
+    z: i64,
+    xv: i64,
+    yv: i64,
+    zv: i64,
 }
 
 fn parse_hail_stone(line: &amp;str) -&gt; HailStone {
-  let pos_vel: Vec&lt;&amp;str&gt; = line.split(" @ ").collect();
-  let pos: Vec&lt;i64&gt; = pos_vel[0].split(", ").map(|x| i64::from_str_radix(x, 10).unwrap()).collect();
-  let vel: Vec&lt;i64&gt; = pos_vel[1].split(", ").map(|x| i64::from_str_radix(x, 10).unwrap()).collect();
-  HailStone {
-    x: pos[0],
-    y: pos[1],
-    z: pos[2],
-    xv: vel[0],
-    yv: vel[1],
-    zv: vel[2],
-  }
+    let pos_vel: Vec&lt;&amp;str&gt; = line.split(" @ ").collect();
+    let pos: Vec&lt;i64&gt; = pos_vel[0]
+        .split(", ")
+        .map(|x| i64::from_str_radix(x, 10).unwrap())
+        .collect();
+    let vel: Vec&lt;i64&gt; = pos_vel[1]
+        .split(", ")
+        .map(|x| i64::from_str_radix(x, 10).unwrap())
+        .collect();
+    HailStone {
+        x: pos[0],
+        y: pos[1],
+        z: pos[2],
+        xv: vel[0],
+        yv: vel[1],
+        zv: vel[2],
+    }
 }
 
 fn read_file(filepath: &amp;str) -&gt; Vec&lt;HailStone&gt; {
-  let contents = fs::read_to_string(filepath);
-  let binding = contents.expect("REASON");
-  let lines = binding.split('\n');
-  let mut hail_stones: Vec&lt;HailStone&gt; = vec!();
-  for line in lines{
-    if line != "" {
-      hail_stones.push(parse_hail_stone(line));
+    let contents = fs::read_to_string(filepath);
+    let binding = contents.expect("REASON");
+    let lines = binding.split('\n');
+    let mut hail_stones: Vec&lt;HailStone&gt; = vec![];
+    for line in lines {
+        if line != "" {
+            hail_stones.push(parse_hail_stone(line));
+        }
     }
-  }
-  hail_stones
+    hail_stones
 }
 
 fn colission(hs1: &amp;HailStone, hs2: &amp;HailStone, limits: (i64, i64)) -&gt; bool {
-  let det = (-hs1.xv) * hs2.yv - hs2.xv * (-hs1.yv);
-  if det == 0 {
-    return false;
-  } else {
-    let time1 = ((hs1.x - hs2.x) * hs2.yv - (hs1.y - hs2.y) * hs2.xv) / det;
-    let time2 = ((-hs1.xv) * (hs1.y - hs2.y) - (-hs1.yv) * (hs1.x - hs2.x)) / det;
-    let point = (hs1.x + hs1.xv * time1, hs1.y + hs1.yv * time1);
-    return point.0 &gt;= limits.0 &amp;&amp; point.0 &lt;= limits.1 &amp;&amp; point.1 &gt;= limits.0 &amp;&amp; point.1 &lt;= limits.1 &amp;&amp; time1 &gt;= 0 &amp;&amp; time2 &gt;= 0;
-  }
+    let det = (-hs1.xv) * hs2.yv - hs2.xv * (-hs1.yv);
+    if det == 0 {
+        return false;
+    } else {
+        let time1 = ((hs1.x - hs2.x) * hs2.yv - (hs1.y - hs2.y) * hs2.xv) / det;
+        let time2 = ((-hs1.xv) * (hs1.y - hs2.y) - (-hs1.yv) * (hs1.x - hs2.x)) / det;
+        let point = (hs1.x + hs1.xv * time1, hs1.y + hs1.yv * time1);
+        return point.0 &gt;= limits.0
+            &amp;&amp; point.0 &lt;= limits.1
+            &amp;&amp; point.1 &gt;= limits.0
+            &amp;&amp; point.1 &lt;= limits.1
+            &amp;&amp; time1 &gt;= 0
+            &amp;&amp; time2 &gt;= 0;
+    }
 }
 
 fn number_of_collisions(hail_stones: &amp;Vec&lt;HailStone&gt;, limits: (i64, i64)) -&gt; u64 {
-  let mut total: u64 = 0;
-  for i in 0 .. hail_stones.len() {
-    for j in i + 1 .. hail_stones.len() {
-      if colission(&amp;hail_stones[i], &amp;hail_stones[j], limits) {
-        total += 1;
-      }
+    let mut total: u64 = 0;
+    for i in 0..hail_stones.len() {
+        for j in i + 1..hail_stones.len() {
+            if colission(&amp;hail_stones[i], &amp;hail_stones[j], limits) {
+                total += 1;
+            }
+        }
     }
-  }
-  total
+    total
 }
 
-fn perfect_shot(hailstones: &amp;Vec&lt;HailStone&gt;) -&gt; i64{
-  let cfg = Config::new();
-  let ctx = Context::new(&amp;cfg);
-  let solver = Solver::new(&amp;ctx);
-  let px = Int::new_const(&amp;ctx, "px");
-  let py = Int::new_const(&amp;ctx, "py");
-  let pz = Int::new_const(&amp;ctx, "pz");
-  let vx = Int::new_const(&amp;ctx, "vx");
-  let vy = Int::new_const(&amp;ctx, "vy");
-  let vz = Int::new_const(&amp;ctx, "vz");
-  for hailstone in hailstones {
-    let pxn = Int::from_i64(&amp;ctx, hailstone.x);
-    let pyn = Int::from_i64(&amp;ctx, hailstone.y);
-    let pzn = Int::from_i64(&amp;ctx, hailstone.z);
-    let vxn = Int::from_i64(&amp;ctx, hailstone.xv);
-    let vyn = Int::from_i64(&amp;ctx, hailstone.yv);
-    let vzn = Int::from_i64(&amp;ctx, hailstone.zv);
-    let tn = Int::fresh_const(&amp;ctx, "t");
-    solver.assert(&amp;(&amp;pxn + &amp;vxn * &amp;tn)._eq(&amp;(&amp;px + &amp;vx * &amp;tn)));
-    solver.assert(&amp;(&amp;pyn + &amp;vyn * &amp;tn)._eq(&amp;(&amp;py + &amp;vy * &amp;tn)));
-    solver.assert(&amp;(&amp;pzn + &amp;vzn * &amp;tn)._eq(&amp;(&amp;pz + &amp;vz * &amp;tn)));
-  }
-  solver.check();
-  let model = solver.get_model().unwrap();
-  let x = model.get_const_interp(&amp;px).unwrap().as_i64().unwrap();
-  let y = model.get_const_interp(&amp;py).unwrap().as_i64().unwrap();
-  let z = model.get_const_interp(&amp;pz).unwrap().as_i64().unwrap();
-  x + y + z
+fn perfect_shot(hailstones: &amp;Vec&lt;HailStone&gt;) -&gt; i64 {
+    let cfg = Config::new();
+    let ctx = Context::new(&amp;cfg);
+    let solver = Solver::new(&amp;ctx);
+    let px = Int::new_const(&amp;ctx, "px");
+    let py = Int::new_const(&amp;ctx, "py");
+    let pz = Int::new_const(&amp;ctx, "pz");
+    let vx = Int::new_const(&amp;ctx, "vx");
+    let vy = Int::new_const(&amp;ctx, "vy");
+    let vz = Int::new_const(&amp;ctx, "vz");
+    for hailstone in hailstones {
+        let pxn = Int::from_i64(&amp;ctx, hailstone.x);
+        let pyn = Int::from_i64(&amp;ctx, hailstone.y);
+        let pzn = Int::from_i64(&amp;ctx, hailstone.z);
+        let vxn = Int::from_i64(&amp;ctx, hailstone.xv);
+        let vyn = Int::from_i64(&amp;ctx, hailstone.yv);
+        let vzn = Int::from_i64(&amp;ctx, hailstone.zv);
+        let tn = Int::fresh_const(&amp;ctx, "t");
+        solver.assert(&amp;(&amp;pxn + &amp;vxn * &amp;tn)._eq(&amp;(&amp;px + &amp;vx * &amp;tn)));
+        solver.assert(&amp;(&amp;pyn + &amp;vyn * &amp;tn)._eq(&amp;(&amp;py + &amp;vy * &amp;tn)));
+        solver.assert(&amp;(&amp;pzn + &amp;vzn * &amp;tn)._eq(&amp;(&amp;pz + &amp;vz * &amp;tn)));
+    }
+    solver.check();
+    let model = solver.get_model().unwrap();
+    let x = model.get_const_interp(&amp;px).unwrap().as_i64().unwrap();
+    let y = model.get_const_interp(&amp;py).unwrap().as_i64().unwrap();
+    let z = model.get_const_interp(&amp;pz).unwrap().as_i64().unwrap();
+    x + y + z
 }
 
 fn part1() {
-  let hail_stones = read_file("INPUT");
-  println!("Part 1: {}", number_of_collisions(&amp;hail_stones, (200_000_000_000_000, 400_000_000_000_000)));
+    let hail_stones = read_file("INPUT");
+    println!(
+        "Part 1: {}",
+        number_of_collisions(&amp;hail_stones, (200_000_000_000_000, 400_000_000_000_000))
+    );
 }
 
 fn part2() {
-  let hail_stones = read_file("INPUT");
-  println!("Part 2: {}", perfect_shot(&amp;hail_stones));
+    let hail_stones = read_file("INPUT");
+    println!("Part 2: {}", perfect_shot(&amp;hail_stones));
 }
 
 fn main() {
-  println!("Year 2023 day 24 - Never Tell Me The Odds");
-  part1();
-  part2();
+    println!("Year 2023 day 24 - Never Tell Me The Odds");
+    part1();
+    part2();
 }
 </code></pre>
 
@@ -277,11 +291,11 @@ fn main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2023-25.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2023-23.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-23.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023-25.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -291,11 +305,11 @@ fn main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2023-25.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2023-23.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-23.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023-25.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
